--- a/dialogue-guardian/.bumpversion.cfg
+++ b/dialogue-guardian/.bumpversion.cfg
@@ -15,3 +15,9 @@ replace = version = "{new_version}"
 [bumpversion:file:src/guardian/__init__.py]
 search = __version__ = "{current_version}"
 replace = __version__ = "{new_version}"
+
+[bumpversion:file:src/guardian/cli.py]
+search = version="%(prog)s {current_version}"
+replace = version="%(prog)s {new_version}"
+
+
