--- a/dialogue-guardian/pytest.ini
+++ b/dialogue-guardian/pytest.ini
@@ -1,3 +1,6 @@
+# SPDX-FileCopyrightText: 2025 Tony Snearly
+# SPDX-License-Identifier: OSL-3.0
+
 [tool:pytest]
 testpaths = tests
 python_files = test_*.py
