--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -50,7 +50,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install bump2version build
+          pip install bump2version build twine
 
       - name: Bump version
         id: bump
@@ -224,12 +224,18 @@ jobs:
           files: dialogue-guardian/dist/*
           generate_release_notes: true
 
-      - name: Wait for PyPI Publish
+      - name: Publish to PyPI
+        if: github.event.inputs.prerelease == 'false'
+        env:
+          TWINE_USERNAME: __token__
+          TWINE_PASSWORD: ${{ secrets.PYPI_API_TOKEN }}
         run: |
-          echo "✅ Release created successfully!"
-          echo "📦 The PyPI publish workflow should be triggered automatically by:"
-          echo "   1. Tag push: v${{ env.NEW_VERSION }}"
-          echo "   2. GitHub release creation"
-          echo ""
-          echo "🔍 Check the Actions tab to see the 'Publish to PyPI' workflow running."
-          echo "🚀 Your package will be available on PyPI shortly!"
+          twine upload dialogue-guardian/dist/*
+
+      - name: Publish to TestPyPI
+        if: github.event.inputs.prerelease == 'true'
+        env:
+          TWINE_USERNAME: __token__
+          TWINE_PASSWORD: ${{ secrets.TEST_PYPI_API_TOKEN }}
+        run: |
+          twine upload --repository testpypi dialogue-guardian/dist/*
