Streamline the release workflow to use bump2version; ensure README is uniform for new project structure.

--- a/dialogue-guardian/.bumpversion.cfg
+++ b/dialogue-guardian/.bumpversion.cfg
@@ -15,3 +15,15 @@ replace = version = "{new_version}"
 [bumpversion:file:src/guardian/__init__.py]
 search = __version__ = "{current_version}"
 replace = __version__ = "{new_version}"
+
+[bumpversion:file:docs/conf.py]
+search = release = '{current_version}'
+replace = release = '{new_version}'
+
+[bumpversion:file:docs/conf.py]
+search = current_version = '{current_version}'
+replace = current_version = '{new_version}'
+
+[bumpversion:file:../README.md]
+search = __VERSION__
+replace = {new_version}
